--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-API_KEY=4332e734ec2d37650779c2e3a4009c0a
-=======
-API_KEY=4332e734ec2d37650779c2e3a4009c0a
->>>>>>> 640dedb0d65143c35fe446263b4f44f8bd68cbdd
+API_KEY="4332e734ec2d37650779c2e3a4009c0a";
