--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-API_KEY="4332e734ec2d37650779c2e3a4009c0a";
+REACT_APP_API_KEY=4332e734ec2d37650779c2e3a4009c0a
+REACT_APP_API_URL=https://api.openweathermap.org/data/2.5
