--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.3.1",
     "luxon": "^3.4.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.11.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
