--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
   "name": "weatherforecastapp",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@iconscout/react-unicons": "^2.0.2",
+    "@iconscout/react-unicons": "^2.2.5",
     "@mui/material": "^6.1.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "caniuse-lite": "^1.0.30001671",
     "chart.js": "^4.4.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.3.1",
+    "framer-motion": "^12.23.12",
     "luxon": "^3.4.0",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^4.11.0",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "depcheck": "^1.4.7"
   }
 }
